# project-insight-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: main.py
app/api/v1/: endpoints.py
app/models/: java_file.py
app/schemas/: java_file_read.py  java_file_upload.py
