[project]
name = "project-insight-api"
version = "0.1.0"
description = "MVP API for Project Insight"
authors = [
    { name = "Gustavo A. Gutkoski", email = "gustavogutkoski2609@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.2"
black = "^25.9.0"
isort = "^6.0.1"
ruff = "^0.13.2"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
skip = [".venv", "build", "dist"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
exclude = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = '(\.venv|build|dist)/'
